#694 negatable options - work in progress